Add new image, fix styles

--- a/flask-app/templates/grant.html
+++ b/flask-app/templates/grant.html
@@ -38,16 +38,16 @@
                         <p>Все стипендии</p>
                         <ul class="select-block__list">
                             <li>
-                                <a href="#">Стипендия правительства РФ по приоритетн...</a>
+                                <a href="#">Все стипендии</a>
                             </li>
                             <li>
-                                <a href="#">Стипендия правительства РФ по приоритетн...</a>
+                                <a href="#">Стипендия за научные достижения в IT</a>
                             </li>
                             <li>
-                                <a href="#">Стипендия правительства РФ по приоритетн...</a>
+                                <a href="#">Повышенная государственная академическая...</a>
                             </li>
                             <li>
-                                <a href="#">Стипендия правительства РФ по приоритетн...</a>
+                                <a href="#">Повышенная государственная стипендия студ...</a>
                             </li>
                             <li>
                                 <a href="#">Стипендия правительства РФ по приоритетн...</a>
