--- a/flask-app/templates/index.html
+++ b/flask-app/templates/index.html
@@ -110,19 +110,19 @@
                         <p>Все стипендии</p>
                         <ul class="select-block__list">
                             <li>
-                                <a href="#">Стипендия правительства РФ по приоритетн...</a>
+                                <a href="#">Все стипендии</a>
                             </li>
                             <li>
-                                <a href="#">Стипендия правительства РФ по приоритетн...</a>
+                                <a href="#">Стипендия за научные достижения в IT</a>
                             </li>
                             <li>
-                                <a href="#">Стипендия правительства РФ по приоритетн...</a>
+                                <a href="#">Повышенная государственная академическая...</a>
                             </li>
                             <li>
-                                <a href="#">Стипендия правительства РФ по приоритетн...</a>
+                                <a href="#">Повышенная государственная стипендия студ...</a>
                             </li>
                             <li>
-                                <a href="#">Стипендия правительства РФ по приоритетн...</a>
+                                <a href="#">Повышенная стипендия Ученого совета УрФУ</a>
                             </li>
                         </ul>
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
