--- a/flask-app/templates/index.html
+++ b/flask-app/templates/index.html
@@ -47,8 +47,8 @@
                     <div class="notif__sert">
                         <div class="notif__sert-inner">
                             <div class="notif__sert-img">
-                                <a href="{{sert.img}}" data-fancybox="images">
-                                    <img src="{{sert.img}}" alt="">
+                                <a href="static/sert/{{sert.filename}}" data-fancybox="images">
+                                    <img src="static/sert/{{sert.filename}}" alt="">
                                 </a>
                             </div>
                             <div class="notif__sert-info">
